<resources>
    <string name="app_name">ItMap</string>
    <string name="log">Log</string>
    <string name="map">Map</string>
    <string name="record">Record</string>
    <string name="scrollTop">Scroll Top</string>
    <string name="scrollEnd">Scroll End</string>
    <string name="setting">Setting</string>
    <string name="server">Server</string>
    <string name="account">Account</string>
    <string name="keyword">Keyword</string>
    <string name="recordTiming">Record Timing (per N minutes)</string>
    <string name="uploadTiming">Upload Timing (per N records)</string>
    <string name="autoCleanData">Auto Clean Data (valid at restart)</string>
    <string name="autoFollowRecord">Auto Follow Record (effective immediately)</string>
    <string name="message">Message</string>
    <string name="share">Share</string>
    <string name="shareUrl">Share URL</string>
    <string name="shareRecord">Share Record</string>
    <string name="delete">Delete</string>
    <string name="deleteLog">Delete Log</string>
    <string name="deleteRecord">Delete Record</string>
    <string name="mapAddress">Map Address</string>
    <string name="addressEdit">Edit</string>
    <string name="addressStandard">Standard</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="address3">Address3</string>
    <string name="setPrivateArea">Set Private Area</string>
    <string name="radius_metre">Radius (metre)</string>
    <string name="latitude_degree">Latitude (degree)</string>
    <string name="longitude_degree">Longitude (degree)</string>
    <string name="fetchLocation">Fetch Location</string>
    <string name="checkLocation">Check Location</string>
    <string name="total">Total</string>
    <string name="time_">Time:</string>
    <string name="distance_">Distance:</string>
    <string name="elevation">Elevation</string>
    <string name="min_">Min:</string>
    <string name="max_">Max:</string>
    <string name="gain_">Gain:</string>
    <string name="loss_">Loss:</string>
    <string name="recordHistory">Record History</string>
    <string name="formatTime">%02d:%02d:%02d</string>
    <string name="formatDistance">%.1fm</string>
    <string name="formatElevation">%.1fm</string>
    <string name="formatLongitude">%.6f</string>
    <string name="formatLatitude">%.6f</string>
    <string name="formatAltitude">%.1fm</string>
</resources>