<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="8dp">

    <TextView
        android:id="@+id/textPrivacyRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radius_metre" />

    <EditText
        android:id="@+id/editPrivacyRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textPrivacyLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitude_degree" />

    <EditText
        android:id="@+id/editPrivacyLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textPrivacyLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude_degree" />

    <EditText
        android:id="@+id/editPrivacyLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPrivacyFetchLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/fetchLocation"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonPrivacyCheckLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/checkLocation"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>