<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="8dp">

    <TextView
        android:id="@+id/textAddress1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address1" />

    <EditText
        android:id="@+id/editAddress1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address2" />

    <EditText
        android:id="@+id/editAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textAddress3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address3" />

    <EditText
        android:id="@+id/editAddress3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:autofillHints=""
        tools:ignore="LabelFor" />
</LinearLayout>